feat: 新增数学模块(周期/鸽巢/盈亏/还原/和差倍/行程)并统一步骤样式

--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -215,10 +215,16 @@
               icon: "🔢",
               collapsed: false,
               data: [
-                { name: '鸡兔同笼', emoji: '🐔', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/chicken_rabbit/chicken_rabbit.html' },
-                { name: '牛吃草', emoji: '🐄', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/grass/grass.html' },
+                { name: '和差倍问题', emoji: '📊', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/sum_diff/sum_diff.html' },
+                { name: '周期问题', emoji: '🔁', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/cycle/cycle.html' },
                 { name: '植树问题', emoji: '🌲', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/plant/plant.html' },
                 { name: '年龄问题', emoji: '👨‍👦', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/age/age.html' },
+                { name: '鸡兔同笼', emoji: '🐔', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/chicken_rabbit/chicken_rabbit.html' },
+                { name: '盈亏问题', emoji: '⚖️', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/profit_loss/profit_loss.html' },
+                { name: '还原问题', emoji: '🔄', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/restore/restore.html' },
+                { name: '鸽巢原理', emoji: '🕊️', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/drawer/drawer.html' },
+                { name: '牛吃草', emoji: '🐄', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/grass/grass.html' },
+                { name: '行程问题', emoji: '🚗', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/travel/travel.html' },
                 { name: '数独计算', emoji: '🧩', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/sudoku/sudoku.html' }
               ]
             },
