feat(shuxue): 添加5个数学思维训练工具
- 时钟问题：钟面角度计算与追及问题
- 方阵问题：实心/空心方阵人数计算
- 排列组合：排列与组合的分步计算演示
- 容斥原理：韦恩图可视化与集合运算
- 平均数问题：多组数据平均数计算

统一布局：核心公式置于右侧面板顶部

--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -225,6 +225,11 @@
                 { name: '鸽巢原理', emoji: '🕊️', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/drawer/drawer.html' },
                 { name: '牛吃草', emoji: '🐄', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/grass/grass.html' },
                 { name: '行程问题', emoji: '🚗', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/travel/travel.html' },
+                { name: '时钟问题', emoji: '🕐', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/clock/clock.html' },
+                { name: '方阵问题', emoji: '🎖️', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/formation/formation.html' },
+                { name: '排列组合', emoji: '🎲', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/permutation/permutation.html' },
+                { name: '容斥原理', emoji: '🔗', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/inclusion_exclusion/inclusion_exclusion.html' },
+                { name: '平均数问题', emoji: '📊', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/average/average.html' },
                 { name: '数独计算', emoji: '🧩', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/sudoku/sudoku.html' }
               ]
             },
