feat(pikachu): 新增识字学习和脑筋急转弯功能
- 新增识字学习页面，支持汉字笔画顺序展示和动画播放
- 新增脑筋急转弯页面
- 重构唐代诗人关系网络到独立目录
- 首页添加识字学习入口
- 多个页面添加缓存控制

--- a/pikachu/curriculum/index.html
+++ b/pikachu/curriculum/index.html
@@ -402,5 +402,6 @@
     </div>
 
     <script src="script.js"></script>
+    <a href="../index.html" style="display:block;text-align:center;margin:30px auto;color:#fff;text-decoration:none;font-size:14px;opacity:0.9;">← 返回皮卡丘学习资源</a>
 </body>
 </html>
