--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -268,7 +268,9 @@
               icon: "📜",
               collapsed: false,
               data: [
-                { name: '唐代诗人关系网络', emoji: '🎭', onlineURL: 'https://cdn.bihe0832.com/pikachu/yuwen/poetry.html' }
+                { name: '识字学习', emoji: '✏️', onlineURL: 'https://cdn.bihe0832.com/pikachu/yuwen/hanzi/' },
+                { name: '唐代诗人关系网络', emoji: '🎭', onlineURL: 'https://cdn.bihe0832.com/pikachu/yuwen/poetry/' },
+                { name: '脑筋急转弯', emoji: '🧠', onlineURL: 'https://cdn.bihe0832.com/pikachu/yuwen/riddle/' }
               ]
             },
             {
