--- a/pikachu/rule/index.html
+++ b/pikachu/rule/index.html
@@ -314,7 +314,7 @@
 
     <!-- 页脚 -->
     <footer class="content-wrapper pb-8">
-        
+        <a href="../index.html" style="display:block;text-align:center;color:#fff;text-decoration:none;font-size:14px;opacity:0.9;">← 返回皮卡丘学习资源</a>
     </footer>
 
     <script src="script.js"></script>
