--- a/pikachu/shuxue/drawer/drawer.html
+++ b/pikachu/shuxue/drawer/drawer.html
@@ -991,5 +991,6 @@
         initDrawers(2);
         initItems(5);
     </script>
+    <a href="../../index.html" style="display:block;text-align:center;margin:30px auto;color:#667eea;text-decoration:none;font-size:14px;">← 返回皮卡丘学习资源</a>
 </body>
 </html>
