--- a/pikachu/yuwen/poetry/index.html
+++ b/pikachu/yuwen/poetry/index.html
@@ -1280,5 +1280,6 @@
             myChart.resize();
         });
     </script>
+    <a href="../../index.html" style="position:fixed;bottom:20px;left:50%;transform:translateX(-50%);color:#fff;text-decoration:none;font-size:14px;opacity:0.8;z-index:100;background:rgba(0,0,0,0.3);padding:8px 20px;border-radius:20px;">← 返回皮卡丘学习资源</a>
 </body>
 </html>
