--- a/pikachu/book/list.html
+++ b/pikachu/book/list.html
@@ -206,5 +206,6 @@
 </div>
 
 <script src="main.js?12"></script>
+<a href="../index.html" style="display:block;text-align:center;margin:30px auto;color:#6366f1;text-decoration:none;font-size:14px;">← 返回皮卡丘学习资源</a>
 </body>
 </html>
