--- a/pikachu/shuxue/chicken_rabbit/chicken_rabbit.html
+++ b/pikachu/shuxue/chicken_rabbit/chicken_rabbit.html
@@ -683,5 +683,6 @@
             updateBarn(0, 0);
         };
     </script>
+    <a href="../../index.html" style="display:block;text-align:center;margin:30px auto;color:#667eea;text-decoration:none;font-size:14px;">← 返回皮卡丘学习资源</a>
 </body>
 </html>
