--- a/pikachu/shuxue/clock/clock.html
+++ b/pikachu/shuxue/clock/clock.html
@@ -1483,5 +1483,6 @@
         // 页面加载后显示默认题目
         updateProblemDisplay();
     </script>
+    <a href="../../index.html" style="display:block;text-align:center;margin:30px auto;color:#667eea;text-decoration:none;font-size:14px;">← 返回皮卡丘学习资源</a>
 </body>
 </html>
