--- a/pikachu/shuxue/grass/grass.html
+++ b/pikachu/shuxue/grass/grass.html
@@ -942,5 +942,6 @@
             updateMeadow(10, false, false, '开始前');
         };
     </script>
+    <a href="../../index.html" style="display:block;text-align:center;margin:30px auto;color:#667eea;text-decoration:none;font-size:14px;">← 返回皮卡丘学习资源</a>
 </body>
 </html>
