--- a/pikachu/shuxue/permutation/permutation.html
+++ b/pikachu/shuxue/permutation/permutation.html
@@ -948,5 +948,6 @@
         // 初始化
         updateProblemDisplay();
     </script>
+    <a href="../../index.html" style="display:block;text-align:center;margin:30px auto;color:#667eea;text-decoration:none;font-size:14px;">← 返回皮卡丘学习资源</a>
 </body>
 </html>
