--- a/pikachu/shuxue/plant/plant.html
+++ b/pikachu/shuxue/plant/plant.html
@@ -1237,5 +1237,6 @@
         // 页面加载完成后初始化
         document.addEventListener('DOMContentLoaded', init);
     </script>
+    <a href="../../index.html" style="display:block;text-align:center;margin:30px auto;color:#667eea;text-decoration:none;font-size:14px;">← 返回皮卡丘学习资源</a>
 </body>
 </html>
