--- a/pikachu/shuxue/restore/restore.html
+++ b/pikachu/shuxue/restore/restore.html
@@ -910,5 +910,6 @@
         // 初始化
         init();
     </script>
+    <a href="../../index.html" style="display:block;text-align:center;margin:30px auto;color:#667eea;text-decoration:none;font-size:14px;">← 返回皮卡丘学习资源</a>
 </body>
 </html>
