--- a/pikachu/shuxue/sudoku/sudoku.html
+++ b/pikachu/shuxue/sudoku/sudoku.html
@@ -1187,5 +1187,6 @@
             return arr;
         }
     </script>
+    <a href="../../index.html" style="display:block;text-align:center;margin:30px auto;color:#667eea;text-decoration:none;font-size:14px;">← 返回皮卡丘学习资源</a>
 </body>
 </html>
