--- a/pikachu/shuxue/travel/travel.html
+++ b/pikachu/shuxue/travel/travel.html
@@ -1263,6 +1263,6 @@
             resetVisualization();
         };
     </script>
-    <a href="../../index.html" style="display:block;text-align:center;margin:30px auto;color:#667eea;text-decoration:none;font-size:14px;">← 返回皮卡丘学习资源</a>
+    <a href="../../index.html" style="display:block;text-align:center;margin:30px auto;color:#fff;text-decoration:none;font-size:14px;">← 返回皮卡丘学习资源</a>
 </body>
 </html>
