feat(pikachu): 诗人关系图添加生平简介和新关系
- 为27位诗人添加详细生平简介（biography字段）
- 添加杜甫-杜牧关系（大小杜）
- 添加王之涣-王昌龄、王之涣-高适关系（旗亭画壁）
- 补充王昌龄-辛渐早期交往背景
- 补充孟浩然-王昌龄详细故事
- 补充李白-王昌龄详细故事
- 详情面板新增生平简介章节

--- a/pikachu/yuwen/poetry/index.html
+++ b/pikachu/yuwen/poetry/index.html
@@ -299,6 +299,13 @@
             flex: 1;
         }
 
+        .detail-section .biography-content {
+            color: #ccc;
+            font-size: 0.85em;
+            line-height: 1.8;
+            text-align: justify;
+        }
+
         .detail-section .masterpiece-list {
             display: flex;
             flex-wrap: wrap;
@@ -753,6 +760,10 @@
                 </div>
             </div>
             <div class="detail-section">
+                <h4>生平简介</h4>
+                <div class="biography-content" id="detail-biography"></div>
+            </div>
+            <div class="detail-section">
                 <h4>代表作</h4>
                 <div class="masterpiece-list" id="detail-masterpieces"></div>
             </div>
@@ -946,6 +957,7 @@
             document.getElementById('detail-title').innerText = poet.title;
             document.getElementById('detail-school').innerText = poet.category;
             document.getElementById('detail-primary-relation').innerText = poet.primaryRelation;
+            document.getElementById('detail-biography').innerText = poet.biography || poet.intro || '暂无生平简介。';
 
             const masterpiecesDiv = document.getElementById('detail-masterpieces');
             masterpiecesDiv.innerHTML = '';
