fix: 修复poemDetails对象缺少结束符的语法错误

--- a/pikachu/yuwen/poetry/index.html
+++ b/pikachu/yuwen/poetry/index.html
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article" />
     <title>皮卡丘学语文之唐代诗人关系网络</title>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
-    <script type="text/javascript" src="poetry-data.js"></script>
+    <script type="text/javascript" src="poetry-data.js?v=1"></script>
     <style>
         @font-face {
             font-family: 'ZCOOLKuaiLe-Regular';
