--- a/pikachu/shuxue/plant/plant.html
+++ b/pikachu/shuxue/plant/plant.html
@@ -638,20 +638,17 @@
                 </div>
                 
                 <div class="controls">
-                    <button class="start-btn" onclick="startCalculation()">
-                        <i class="fas fa-play"></i> 开始计算
-                    </button>
-                    <button class="show-all-btn" onclick="showAllSteps()" id="showAllBtn" disabled>
-                        <i class="fas fa-eye"></i> 一键查看
-                    </button>
                     <div class="nav-buttons">
                         <button class="nav-btn prev" id="prevBtn" onclick="prevStep()" disabled>
                             <i class="fas fa-arrow-left"></i> 上一步
                         </button>
-                        <button class="nav-btn next" id="nextBtn" onclick="nextStep()" disabled>
+                        <button class="nav-btn next" id="nextBtn" onclick="nextStep()">
                             下一步 <i class="fas fa-arrow-right"></i>
                         </button>
                     </div>
+                    <button class="show-all-btn" onclick="showAllSteps()" id="showAllBtn" disabled>
+                        <i class="fas fa-eye"></i> 一键查看
+                    </button>
                 </div>
             </div>
             
@@ -663,7 +660,7 @@
                 <div class="visual-area">
                     <div class="problem-text" id="problemText">
                         <i class="fas fa-book"></i>
-                        <span>请设置题目条件，然后点击"开始计算"</span>
+                        <span>请设置题目条件</span>
                     </div>
                     <div class="road-container" id="road-container">
                         <!-- 道路可视化由JS生成 -->
@@ -689,7 +686,7 @@
                     <span style="margin-left: auto; font-size: 0.85rem;">步骤: <span id="step-counter">0</span>/<span id="total-steps">0</span></span>
                 </div>
                 <div class="steps-container" id="steps-container">
-                    <p style="color: #999; text-align: center; padding: 30px;">👆 点击"开始计算"按钮查看详细解答</p>
+                    <p style="color: #999; text-align: center; padding: 30px;">👆 点击"下一步"开始解答</p>
                 </div>
             </div>
         </div>
@@ -767,9 +764,9 @@
             stepsData = [];
             currentStep = 0;
             maxReachedStep = 0;
-            document.getElementById('steps-container').innerHTML = '<p style="color: #999; text-align: center; padding: 30px;">👆 点击"开始计算"按钮查看详细解答</p>';
+            document.getElementById('steps-container').innerHTML = '<p style="color: #999; text-align: center; padding: 30px;">👆 点击"下一步"开始解答</p>';
             document.getElementById('prevBtn').disabled = true;
-            document.getElementById('nextBtn').disabled = true;
+            document.getElementById('nextBtn').disabled = false;
             document.getElementById('showAllBtn').disabled = true;
             document.getElementById('step-counter').textContent = '0';
             document.getElementById('total-steps').textContent = '0';
@@ -956,6 +953,11 @@
 
         // 下一步
         function nextStep() {
+            // 如果还没有生成步骤，先生成
+            if (stepsData.length === 0) {
+                startCalculation();
+                return;
+            }
             if (currentStep < stepsData.length - 1) {
                 currentStep++;
                 if (currentStep > maxReachedStep) {
