--- a/pikachu/shuxue/restore/restore.html
+++ b/pikachu/shuxue/restore/restore.html
@@ -220,7 +220,7 @@
         
         .show-all-btn {
             width: 100%;
-            padding: 15px;
+            padding: 12px;
             background: linear-gradient(45deg, #9b59b6, #8e44ad);
             color: white;
             border: none;
@@ -533,7 +533,7 @@
                     <i class="fas fa-plus"></i> 添加运算步骤
                 </button>
                 
-                <div class="nav-buttons" style="margin-top: 15px;">
+                <div class="nav-buttons">
                     <button class="nav-btn prev" onclick="prevStep()" id="prevBtn" disabled>
                         <i class="fas fa-arrow-left"></i> 上一步
                     </button>
