--- a/pikachu/shuxue/travel/travel.html
+++ b/pikachu/shuxue/travel/travel.html
@@ -201,7 +201,7 @@
         }
         .nav-buttons button {
             flex: 1;
-            padding: 10px 8px;
+            padding: 12px;
             font-size: 0.9rem;
         }
         
