--- a/pikachu/shuxue/permutation/permutation.html
+++ b/pikachu/shuxue/permutation/permutation.html
@@ -180,7 +180,7 @@
         
         .show-all-btn {
             width: 100%;
-            padding: 15px;
+            padding: 12px;
             background: linear-gradient(45deg, #9b59b6, #8e44ad);
             color: white;
             border: none;
@@ -533,7 +533,7 @@
                     </div>
                 </div>
                 
-                <div class="nav-buttons" style="margin-top: 10px;">
+                <div class="nav-buttons">
                     <button class="nav-btn prev" onclick="prevStep()" id="prevBtn" disabled>
                         <i class="fas fa-arrow-left"></i> 上一步
                     </button>
