--- a/pikachu/shuxue/profit_loss/profit_loss.html
+++ b/pikachu/shuxue/profit_loss/profit_loss.html
@@ -217,7 +217,7 @@
         }
         .nav-buttons button {
             flex: 1;
-            padding: 10px 8px;
+            padding: 12px;
             font-size: 0.9rem;
         }
         
