--- a/pikachu/shuxue/sum_diff/sum_diff.html
+++ b/pikachu/shuxue/sum_diff/sum_diff.html
@@ -595,7 +595,7 @@
                     </div>
                 </div>
                 
-                <div class="nav-buttons" style="margin-top: 15px;">
+                <div class="nav-buttons">
                     <button class="nav-btn prev" onclick="prevStep()" id="prevBtn" disabled>
                         <i class="fas fa-arrow-left"></i> 上一步
                     </button>
@@ -604,7 +604,7 @@
                     </button>
                 </div>
                 
-                <button class="show-all-btn" onclick="showAllSteps()" style="margin-top: 10px;">
+                <button class="show-all-btn" onclick="showAllSteps()">
                     <i class="fas fa-eye"></i> 一键查看
                 </button>
             </div>
