fix(pikachu): 修复页面 Head 规范
修复内容：
- 添加 lang="zh-CN" 属性
- og:locale 从 en_US 改为 zh_CN
- 补充完整 OG 标签（og:description、canonical、og:url、og:site_name、og:type）
- 添加 google-site-verification
- 统一安全字体栈
- 修正 keywords 和 author 属性

影响页面：
- 数学模块：15个页面
- 历史模块：dynasty.html
- 语文模块：hanzi、poetry、riddle
- 规则页面：rule/index.html
- 首页：index.html
- 新增：memory 目录

--- a/pikachu/history/dynasty.html
+++ b/pikachu/history/dynasty.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="format-detection" content="telephone=no">
@@ -10,26 +10,39 @@
   <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
   <meta http-equiv="Expires" content="0">
   <link rel="Shortcut Icon" href="https://cdn.bihe0832.com/images/zixie_32.ico">
-  
-  <title>中国历史朝代表 - 皮卡丘学习资源</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <meta name="author" content="子勰(bihe0832), code@bihe0832.com">
-  <meta name="keywords" content="中国历史,朝代表,历史学习,皮卡丘">
+  <meta name="keywords" content="子勰,bihe0832,皮卡丘,中国历史,朝代表,历史学习">
   <meta name="description" content="中国历史朝代表，包含各朝代时间、开国君主、重要事件等信息">
+  <meta property="og:title" content="中国历史朝代表 - 皮卡丘学习资源" />
+  <meta property="og:locale" content="zh_CN" />
+  <meta property="og:description" content="中国历史朝代表，包含各朝代时间、开国君主、重要事件等信息" />
+  <link rel="canonical" href="https://demo.bihe0832.com/pikachu/history/dynasty.html" />
+  <meta property="og:url" content="https://demo.bihe0832.com/pikachu/history/dynasty.html" />
+  <meta property="og:site_name" content="皮卡丘学习资源" />
+  <meta property="og:type" content="article" />
+  <meta name="google-site-verification" content="3wzNgbjvFNHkH-8QpougMZ0s9Y4GEjG49kEb49QQqpw" />
+  <title>中国历史朝代表 - 皮卡丘学习资源</title>
   
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      -webkit-tap-highlight-color: transparent;
     }
     
     body {
-      font-family: "Microsoft YaHei", "PingFang SC", "Helvetica Neue", sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
       line-height: 1.6;
       color: #333;
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       min-height: 100vh;
       padding: 20px;
+      padding-top: max(20px, env(safe-area-inset-top));
+      padding-bottom: max(20px, env(safe-area-inset-bottom));
+      padding-left: max(20px, env(safe-area-inset-left));
+      padding-right: max(20px, env(safe-area-inset-right));
     }
     
     .container {
