--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -270,7 +270,8 @@
               data: [
                 { name: '识字学习', emoji: '✏️', onlineURL: 'https://cdn.bihe0832.com/pikachu/yuwen/hanzi/' },
                 { name: '唐代诗人关系网络', emoji: '🎭', onlineURL: 'https://cdn.bihe0832.com/pikachu/yuwen/poetry/' },
-                { name: '脑筋急转弯', emoji: '🧠', onlineURL: 'https://cdn.bihe0832.com/pikachu/yuwen/riddle/' }
+                { name: '诗词记忆计划', emoji: '🧠', onlineURL: 'https://cdn.bihe0832.com/pikachu/yuwen/memory/' },
+                { name: '脑筋急转弯', emoji: '💡', onlineURL: 'https://cdn.bihe0832.com/pikachu/yuwen/riddle/' }
               ]
             },
             {
