--- a/pikachu/shuxue/restore/restore.html
+++ b/pikachu/shuxue/restore/restore.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0" />
@@ -11,11 +11,17 @@
     <meta http-equiv="Expires" content="0">
     <link rel="Shortcut Icon" href="https://cdn.bihe0832.com/images/zixie_32.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <meta name="author" CONTENT="子勰(bihe0832), code@bihe0832.com" />
-    <meta name="keywords" content="子勰,bihe0832,工具咩" />
+    <meta name="author" content="子勰(bihe0832), code@bihe0832.com" />
+    <meta name="keywords" content="子勰,bihe0832,皮卡丘,数学,还原问题" />
     <meta name="description" content="皮卡丘学数学之还原问题分步解答" />
-    <meta property="og:title" content="皮卡丘学数学之还原问题分步解答" />
-    <meta property="og:locale" content="en_US" />
+    <meta property="og:title" content="皮卡丘学数学 - 还原问题" />
+    <meta property="og:locale" content="zh_CN" />
+    <meta property="og:description" content="皮卡丘学数学之还原问题分步解答" />
+    <link rel="canonical" href="https://demo.bihe0832.com/pikachu/shuxue/restore/restore.html" />
+    <meta property="og:url" content="https://demo.bihe0832.com/pikachu/shuxue/restore/restore.html" />
+    <meta property="og:site_name" content="皮卡丘学习资源" />
+    <meta property="og:type" content="article" />
+    <meta name="google-site-verification" content="3wzNgbjvFNHkH-8QpougMZ0s9Y4GEjG49kEb49QQqpw" />
     <title>皮卡丘学数学 - 还原问题</title>
     
     <style>
@@ -23,7 +29,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Microsoft YaHei', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
         }
         body {
             background: linear-gradient(135deg, #9b59b6, #3498db);
