--- a/pikachu/yuwen/hanzi/index.html
+++ b/pikachu/yuwen/hanzi/index.html
@@ -19,8 +19,16 @@
     <script src="https://cdn.jsdelivr.net/npm/cnchar-words/cnchar.words.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/cnchar-xhy/cnchar.xhy.min.js"></script>
     <meta name="author" content="子勰(bihe0832), code@bihe0832.com" />
-    <meta name="keywords" content="子勰,bihe0832,识字,汉字学习,笔画顺序" />
+    <meta name="keywords" content="子勰,bihe0832,皮卡丘,识字,汉字学习,笔画顺序" />
     <meta name="description" content="皮卡丘识字学习 - 汉字笔画顺序" />
+    <meta property="og:title" content="皮卡丘识字学习" />
+    <meta property="og:locale" content="zh_CN" />
+    <meta property="og:description" content="皮卡丘识字学习 - 汉字笔画顺序" />
+    <link rel="canonical" href="https://demo.bihe0832.com/pikachu/yuwen/hanzi/" />
+    <meta property="og:url" content="https://demo.bihe0832.com/pikachu/yuwen/hanzi/" />
+    <meta property="og:site_name" content="皮卡丘学习资源" />
+    <meta property="og:type" content="article" />
+    <meta name="google-site-verification" content="3wzNgbjvFNHkH-8QpougMZ0s9Y4GEjG49kEb49QQqpw" />
     <title>皮卡丘识字学习</title>
     
     <style>
@@ -28,13 +36,18 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Microsoft YaHei', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
+            -webkit-tap-highlight-color: transparent;
         }
         body {
             background: linear-gradient(135deg, #667eea, #764ba2);
             color: #333;
             min-height: 100vh;
             padding: 20px;
+            padding-top: max(20px, env(safe-area-inset-top));
+            padding-bottom: max(20px, env(safe-area-inset-bottom));
+            padding-left: max(20px, env(safe-area-inset-left));
+            padding-right: max(20px, env(safe-area-inset-right));
         }
         
         .container {
