--- a/pikachu/rule/index.html
+++ b/pikachu/rule/index.html
@@ -10,36 +10,34 @@
     <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
     <meta http-equiv="Expires" content="0">
     <link rel="Shortcut Icon" href="https://cdn.bihe0832.com/images/zixie_32.ico" />
-    <title>粉卡比行为要求金字塔</title>
-    <meta name="author" CONTENT="子勰(bihe0832), code@bihe0832.com" />
-    <meta name="keywords" content="子勰,bihe0832,工具咩" />
-    <meta name="description" content="粉卡比行为要求金字塔" />
+    <meta name="author" content="子勰(bihe0832), code@bihe0832.com" />
+    <meta name="keywords" content="子勰,bihe0832,皮卡丘,粉卡比,行为要求" />
+    <meta name="description" content="粉卡比行为要求金字塔 - 三个等级的行为要求" />
     <meta property="og:title" content="粉卡比行为要求金字塔" />
-    <meta property="og:locale" content="en_US" />
-    <meta name="google-site-verification" content="3wzNgbjvFNHkH-8QpougMZ0s9Y4GEjG49kEb49QQqpw" />
-    <meta property="og:description" content="" />
-    <link rel="canonical" href="https://blog.bihe0832.com/" />
-    <meta property="og:url" content="https://blog.bihe0832.com/" />
-    <meta property="og:site_name" content="工具咩" />
+    <meta property="og:locale" content="zh_CN" />
+    <meta property="og:description" content="粉卡比行为要求金字塔 - 三个等级的行为要求" />
+    <link rel="canonical" href="https://demo.bihe0832.com/pikachu/rule/" />
+    <meta property="og:url" content="https://demo.bihe0832.com/pikachu/rule/" />
+    <meta property="og:site_name" content="皮卡丘学习资源" />
     <meta property="og:type" content="article" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="format-detection" content="telephone=no">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
-    <meta http-equiv="Expires" content="0">
+    <meta name="google-site-verification" content="3wzNgbjvFNHkH-8QpougMZ0s9Y4GEjG49kEb49QQqpw" />
+    <title>粉卡比行为要求金字塔</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
+            -webkit-tap-highlight-color: transparent;
         }
         
         body {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
             background-attachment: fixed;
             min-height: 100vh;
+            padding-top: env(safe-area-inset-top);
+            padding-bottom: env(safe-area-inset-bottom);
+            padding-left: env(safe-area-inset-left);
+            padding-right: env(safe-area-inset-right);
         }
         
         .glass-effect {
