--- a/pikachu/yuwen/riddle/index.html
+++ b/pikachu/yuwen/riddle/index.html
@@ -12,8 +12,16 @@
     <link rel="Shortcut Icon" href="https://cdn.bihe0832.com/images/zixie_32.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <meta name="author" content="子勰(bihe0832), code@bihe0832.com" />
-    <meta name="keywords" content="子勰,bihe0832,脑筋急转弯" />
+    <meta name="keywords" content="子勰,bihe0832,皮卡丘,脑筋急转弯" />
     <meta name="description" content="皮卡丘脑筋急转弯" />
+    <meta property="og:title" content="皮卡丘脑筋急转弯" />
+    <meta property="og:locale" content="zh_CN" />
+    <meta property="og:description" content="皮卡丘脑筋急转弯 - 动动脑筋想一想" />
+    <link rel="canonical" href="https://demo.bihe0832.com/pikachu/yuwen/riddle/" />
+    <meta property="og:url" content="https://demo.bihe0832.com/pikachu/yuwen/riddle/" />
+    <meta property="og:site_name" content="皮卡丘学习资源" />
+    <meta property="og:type" content="article" />
+    <meta name="google-site-verification" content="3wzNgbjvFNHkH-8QpougMZ0s9Y4GEjG49kEb49QQqpw" />
     <title>皮卡丘脑筋急转弯</title>
     
     <style>
@@ -21,13 +29,18 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Microsoft YaHei', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
+            -webkit-tap-highlight-color: transparent;
         }
         body {
             background: linear-gradient(135deg, #ff9a56, #ff6b6b);
             color: #333;
             min-height: 100vh;
             padding: 20px;
+            padding-top: max(20px, env(safe-area-inset-top));
+            padding-bottom: max(20px, env(safe-area-inset-bottom));
+            padding-left: max(20px, env(safe-area-inset-left));
+            padding-right: max(20px, env(safe-area-inset-right));
             display: flex;
             align-items: center;
             justify-content: center;
