feat(shuxue): 添加定义新运算页面
- 支持加法型、乘法型、混合型、嵌套型四种运算
- 三栏布局，紫色主题
- 计算过程单行显示
- 首页添加导航入口
- 修复鸡兔同笼响应式布局

--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -260,6 +260,7 @@
                 { name: '排列组合', emoji: '🎲', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/permutation/permutation.html' },
                 { name: '容斥原理', emoji: '🔗', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/inclusion_exclusion/inclusion_exclusion.html' },
                 { name: '平均数问题', emoji: '📊', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/average/average.html' },
+                { name: '定义新运算', emoji: '✨', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/new_operation/new_operation.html' },
                 { name: '数独计算', emoji: '🧩', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/sudoku/sudoku.html' }
               ]
             },
