feat(yuwen): 更新诗词记忆计划
- 添加 JS 文件版本号便于缓存更新
- 更新诗词数据

--- a/pikachu/yuwen/memory/index.html
+++ b/pikachu/yuwen/memory/index.html
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article" />
     <title>皮卡丘学语文之诗词记忆计划</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="poems-75.js"></script>
+    <script src="poems-75.js?v=20251225"></script>
     <style>
         @font-face {
             font-family: 'ZCOOLKuaiLe-Regular';
