feat(sport): 添加运动拉伸指南页面
- 新增运动拉伸指南页面，支持分类筛选
- 包含核心训练、通用热身、羽毛球/攀岩专项等6个分类
- 响应式布局：小屏单列、大屏多列
- 卡片展开显示详细动作要点
- 首页添加运动健康分类入口（位于历史与绘本之间）

--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -285,6 +285,14 @@
               ]
             },
             {
+              title: "运动健康",
+              icon: "🏃",
+              collapsed: false,
+              data: [
+                { name: '运动拉伸指南', emoji: '🧘', onlineURL: 'https://cdn.bihe0832.com/pikachu/sport/stretch.html' }
+              ]
+            },
+            {
               title: "绘本相关",
               icon: "📖",
               collapsed: false,
