feat(sport): 添加原动作描述字段并优化显示
- 为所有动作添加 originalDesc 字段保留原始描述
- 原描述使用与阶段/强度相同的样式，单独一行显示
- 精简核心训练原描述，去除序号和次数后缀
- 修正手腕-手指复合伸展的原描述

--- a/pikachu/sport/stretch.html
+++ b/pikachu/sport/stretch.html
@@ -564,6 +564,14 @@
                     </div>
                     <div class="card-content">
                         <div class="card-body">
+                            ${exercise.originalDesc ? `
+                            <div class="detail-section detail-info-grid" style="margin-bottom: 0; padding-bottom: 0; border-bottom: none;">
+                                <div class="detail-info-item" style="flex-basis: 100%;">
+                                    <span class="detail-info-label"><i class="fas fa-quote-left"></i> 原描述</span>
+                                    <span class="detail-info-value">${exercise.originalDesc}</span>
+                                </div>
+                            </div>
+                            ` : ''}
                             <div class="detail-section detail-info-grid">
                                 ${exercise.stage ? `
                                 <div class="detail-info-item">
