--- a/tools/index.html
+++ b/tools/index.html
@@ -255,11 +255,11 @@
   </div>
   
   <div class="g-box">
-    <!-- 最近常用 -->
+    <!-- 最近使用 -->
     <div class="category" v-if="recentList.length > 0" :class="{ collapsed: recentCollapsed }">
       <div class="category-header" @click="recentCollapsed = !recentCollapsed">
         <span class="category-icon">⭐</span>
-        <span class="category-title">最近常用</span>
+        <span class="category-title">最近使用</span>
         <span class="category-count">{{ recentList.length }}项</span>
         <span class="category-arrow">▼</span>
       </div>
@@ -296,7 +296,7 @@
 </body>
 <script src="./../js/vue/2.6.10/vue.min.js"></script>
 <script>
-const STORAGE_KEY = 'tools_click_count';
+const STORAGE_KEY = 'tools_recent_clicks';
 
 new Vue({
   el: '#app',
@@ -403,12 +403,12 @@ new Vue({
       return tools;
     },
     recentList() {
-      const counts = this.getClickCounts();
-      const sorted = Object.entries(counts)
-        .filter(([url, count]) => count > 0)
-        .sort((a, b) => b[1] - a[1])
+      const recentClicks = this.getRecentClicks();
+      // 按时间倒序排列，取前5条
+      const sorted = recentClicks
+        .sort((a, b) => b.time - a.time)
         .slice(0, 5)
-        .map(([url]) => url);
+        .map(item => item.url);
       return sorted.map(url => this.allTools.find(t => t.url === url)).filter(Boolean);
     }
   },
@@ -416,17 +416,22 @@ new Vue({
     toggleCategory(index) {
       this.$set(this.dataList[index], 'collapsed', !this.dataList[index].collapsed);
     },
-    getClickCounts() {
+    getRecentClicks() {
       try {
-        return JSON.parse(localStorage.getItem(STORAGE_KEY)) || {};
+        return JSON.parse(localStorage.getItem(STORAGE_KEY)) || [];
       } catch {
-        return {};
+        return [];
       }
     },
     recordClick(url) {
-      const counts = this.getClickCounts();
-      counts[url] = (counts[url] || 0) + 1;
-      localStorage.setItem(STORAGE_KEY, JSON.stringify(counts));
+      let recentClicks = this.getRecentClicks();
+      // 移除已存在的相同URL记录
+      recentClicks = recentClicks.filter(item => item.url !== url);
+      // 添加新记录到开头
+      recentClicks.unshift({ url: url, time: Date.now() });
+      // 只保留最近20条记录
+      recentClicks = recentClicks.slice(0, 20);
+      localStorage.setItem(STORAGE_KEY, JSON.stringify(recentClicks));
     }
   }
 })
