feat(rule): 更新粉卡比行为要求内容和样式

--- a/pikachu/rule/index.html
+++ b/pikachu/rule/index.html
@@ -50,6 +50,7 @@
             transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
             position: relative;
             overflow: hidden;
+            border-radius: 1rem;
         }
         
         .pyramid-level::before {
@@ -76,8 +77,6 @@
             opacity: 0;
             transform: translateY(20px);
             animation: slideInUp 0.6s ease forwards;
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
         }
         
         .detail-item:nth-child(1) { animation-delay: 0.1s; }
@@ -315,7 +314,7 @@
         <a href="../index.html" style="display:block;text-align:center;color:#fff;text-decoration:none;font-size:14px;opacity:0.9;">← 返回皮卡丘学习资源</a>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=20260104"></script>
 
 
 
